-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.0
-
None
-
Win XP
-
af7d2b2127dadbdf828c60c75255bb1b4f591651
To reproduce, replace the Window::iconActivated() function in the desktop/systray Qt example with the following code:
//////////////////////////////////////////////// void Window::iconActivated(QSystemTrayIcon::ActivationReason reason) { switch (reason) { case QSystemTrayIcon::Trigger: { QMenu menu; menu.addAction("Test"); menu.exec(QCursor::pos()); } break; case QSystemTrayIcon::DoubleClick: iconComboBox->setCurrentIndex((iconComboBox->currentIndex() + 1) % iconComboBox->count()); break; case QSystemTrayIcon::MiddleClick: showMessage(); break; default: ; } } ////////////////////////////////////////////////
Then left-click on the icon in the system tray. A menu will come up, but clicking anywhere else on the desktop won't make it disappear. Context menus work fine though. This issue happens only on Windows (tested on XP).
- relates to
-
QTBUG-44928 [REG 4.8.6->5.4.1] Windows: Widget with Qt::Popup window flag can’t be closed if there is no other visible widget
-
- Closed
-
| For Gerrit Dashboard: QTBUG-7386 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 108319,5 | Windows: Activate popup when there is no active window. | 5.5 | qt/qtbase | Status: MERGED | -2 | 0 |