Always activate popup windows on show

The problem was that popups that were opened
from a system tray icon did not get activated
and clicking outside would not close
the popup as intended. Ensuring that all popups
get activated on show should solve this problem
in the general sense.

Task-number: QTBUG-7386
Reviewed-by: denis